[package]
name = "consensus-instance"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
chrono = "0.4.40"
hex = "0.4.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
sqlx = { version = "0.8.3", features = [ "runtime-tokio", "sqlite"] }
tokio = { version = "1.44.1", features = ["full"] }
tower = { version = "0.5.2" }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
