[package]
name = "consensus-instance"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["multipart"] }
chrono = "0.4.40"
hex = "0.4.3"
log = "0.4.26"
log4rs = "1.3.0"
reqwest = { version = "0.12.14", features = ["json"] }
ring = "0.17.14"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
sqlx = { version = "0.8.3", features = [ "runtime-tokio", "sqlite"] }
tokio = { version = "1.44.1", features = ["full"] }
tokio-util = "0.7.14"
toml = "0.8.20"
tower = { version = "0.5.2" }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
